k8s-templates/manifest/mongo-admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-admin
  labels:
    app: mongo-admin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-admin
  template:
    metadata:
      labels:
        app: mongo-admin
    spec:
      containers:
        - name: mongo-admin
          image: mongo-express:1.0.2-20-alpine3.19

          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service

metadata:
  name: mongo-admin-service

spec:
  selector:
    app: mongo-admin

  # type: LoadBalancer # default is ClusterIP, type LoadBalancer is used for testing only in prod use ingress controller

  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # nodePort: 30000
